3.7/docs/self-hosting/how-to-guides/external-s3/index.md
# Configuring external S3 for OpenVidu recordings

OpenVidu, by default, uses MinIO for recording storage, but it can be configured to use an external S3 provider instead. This guide provides the steps necessary to configure OpenVidu with an external S3 provider for your deployment.

> **Info**
>
> If you are deploying using AWS CloudFormation, the S3 bucket is configured automatically to use the AWS S3 service. **In this case, there is no need to follow this guide**.

## Configuration

Configuring an external S3 bucket in OpenVidu is straightforward. Update the following parameters in the `openvidu.env` file on one of the Master Nodes or your Single Node deployment. Depending on your deployment type, the location of the `openvidu.env` file is as follows:

- **Single Node**: `/opt/openvidu/config/openvidu.env`
- **Elastic / High Availability**: `/opt/openvidu/config/cluster/openvidu.env`

```bash
EXTERNAL_S3_ENDPOINT=<YOUR_S3_HTTP_ENDPOINT>
EXTERNAL_S3_ACCESS_KEY=<YOUR_S3_ACCESS_KEY>
EXTERNAL_S3_SECRET_KEY=<YOUR_S3_SECRET_KEY>
EXTERNAL_S3_REGION=<YOUR_S3_REGION>
EXTERNAL_S3_PATH_STYLE_ACCESS=<YOUR_S3_PATH_STYLE_ACCESS>
EXTERNAL_S3_BUCKET_APP_DATA=<YOUR_APP_DATA_BUCKET>
# For High Availability deployments only
EXTERNAL_S3_BUCKET_CLUSTER_DATA=<YOUR_CLUSTER_DATA_BUCKET>
```

**Parameter Details:**

- `EXTERNAL_S3_ENDPOINT`: HTTP endpoint of your S3 provider.
- `EXTERNAL_S3_ACCESS_KEY`: Access key for your S3 provider.
- `EXTERNAL_S3_SECRET_KEY`: Secret key for your S3 provider.
- `EXTERNAL_S3_REGION`: Region of your S3 provider.
- `EXTERNAL_S3_PATH_STYLE_ACCESS`: Use path-style access for the S3 bucket (`true` or `false` based on provider requirements).
- `EXTERNAL_S3_BUCKET_APP_DATA`: Bucket for storing OpenVidu recordings and data related to the OpenVidu Meet service.
- `EXTERNAL_S3_BUCKET_CLUSTER_DATA` (High Availability only): Bucket for storing observability data and other data specific to a High Availability deployment.

After updating the `openvidu.env` file, restart the Master Node or your Single Node deployment:

```bash
systemctl restart openvidu
```

> **Info**
>
> Note that when using an external S3 bucket, the MinIO service will not be started and will appear as `Exited (0)` when checking the status of the services.

## Example with AWS S3

Assume the region of your bucket is `eu-west-1` and you have an S3 bucket named `my-openvidu-bucket`. Your configuration should be:

```bash
EXTERNAL_S3_ENDPOINT=https://s3.eu-west-1.amazonaws.com
EXTERNAL_S3_ACCESS_KEY=<YOUR_AWS_ACCESS_KEY>
EXTERNAL_S3_SECRET_KEY=<YOUR_AWS_SECRET_KEY>
EXTERNAL_S3_REGION=eu-west-1
EXTERNAL_S3_PATH_STYLE_ACCESS=true
EXTERNAL_S3_BUCKET_APP_DATA=my-openvidu-bucket

# For High Availability deployments only
EXTERNAL_S3_BUCKET_CLUSTER_DATA=my-openvidu-cluster-bucket
```

> **Warning**
>
> Note that the region must be specified in the `EXTERNAL_S3_ENDPOINT` parameter for AWS S3. This may not be required for other S3 providers but is necessary for AWS S3.

## About the Path-Style parameter

The `EXTERNAL_S3_PATH_STYLE_ACCESS` parameter is used to specify whether to use path-style access if `true` or virtual-hosted-style access if `false`. Check this documentation for more information: [Amazon S3 Path Style Access](https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html)

This parameter requires a specific value depending on the S3 provider. Here is a table with some examples:

| S3 Provider         | `EXTERNAL_S3_PATH_STYLE_ACCESS` Value |
| ------------------- | ------------------------------------- |
| AWS S3              | `true` or `false` Recommend `true`    |
| MinIO               | `false`                               |
| DigitalOcean Spaces | `false`                               |

Usually the value `false` is compatible with all S3 providers, but some providers may require `true`. Check the documentation of your S3 provider to confirm the correct value.

## Server-Side Encryption

When using an external S3 provider, you can optionally enable **Server-Side Encryption (SSE)** for data at rest. This applies to both the application data bucket (`EXTERNAL_S3_BUCKET_APP_DATA`) and, in High Availability deployments, the cluster data bucket (`EXTERNAL_S3_BUCKET_CLUSTER_DATA`).

Add the following parameters to your `openvidu.env` file:

```bash
EXTERNAL_S3_SSE_TYPE=<YOUR_SSE_TYPE>
EXTERNAL_S3_SSE_KMS_KEY_ID=<YOUR_KMS_KEY_ID>
EXTERNAL_S3_SSE_KMS_ENCRYPTION_CONTEXT=<YOUR_KMS_ENCRYPTION_CONTEXT>
```

**Parameter Details:**

- `EXTERNAL_S3_SSE_TYPE`: The server-side encryption algorithm to use. Supported values are:
  - `SSE-S3`: Server-side encryption with S3 managed keys (AES256).
  - `SSE-KMS`: Server-side encryption with AWS KMS managed keys.
- `EXTERNAL_S3_SSE_KMS_KEY_ID`: The AWS KMS key ID to use for encryption. **Required** when `EXTERNAL_S3_SSE_TYPE` is set to `SSE-KMS`.
- `EXTERNAL_S3_SSE_KMS_ENCRYPTION_CONTEXT`: An optional JSON object representing the KMS encryption context. **Only used with `SSE-KMS`**. If set, it must be a valid JSON object.

> **Info**
>
> AWS S3 enables [server-side encryption by default](https://aws.amazon.com/blogs/aws/amazon-s3-encrypts-new-objects-by-default/) for new objects, but other S3 providers may not. The OpenVidu SSE settings allow you to **explicitly enforce** encryption regardless of the provider's default behavior, ensuring consistent data protection across all deployments.

### SSE-S3 Example

To use SSE-S3 (AES256 encryption managed by S3):

```bash
EXTERNAL_S3_SSE_TYPE=SSE-S3
EXTERNAL_S3_SSE_KMS_KEY_ID=
EXTERNAL_S3_SSE_KMS_ENCRYPTION_CONTEXT=
```

### SSE-KMS Example

To use SSE-KMS with a specific AWS KMS key and an optional encryption context:

```bash
EXTERNAL_S3_SSE_TYPE=SSE-KMS
EXTERNAL_S3_SSE_KMS_KEY_ID=arn:aws:kms:eu-west-1:123456789012:key/12345678-1234-1234-1234-123456789012
EXTERNAL_S3_SSE_KMS_ENCRYPTION_CONTEXT={"department":"engineering","project":"openvidu"}
```

## Troubleshooting

On any problem, check these sections:

- [Config Troubleshooting](https://openvidu.io/3.7/docs/self-hosting/configuration/changing-config/#troubleshooting-configuration)
- The Status and Checking Logs sections under Administration for each deployment type:
  - [Single Node](https://openvidu.io/3.7/docs/self-hosting/single-node/on-premises/admin/#checking-the-status-of-services)
  - [Elastic](https://openvidu.io/3.7/docs/self-hosting/elastic/on-premises/admin/#checking-the-status-of-services)
  - [High Availability](https://openvidu.io/3.7/docs/self-hosting/ha/on-premises/admin/#checking-the-status-of-services)
